# viper

./: GUI_1.py  GUI_viper.py  GUI_vpr.py  HD189733(1).vels  README.md  config_file_viper.ini  config_viper.ini  convert_output.py  forward_model.py  hbox.py  model.py  param.py  pause.py  pyproject.toml  setup.cfg  targ.py  viper.py  viper_jupyter.ipynb  vpr.py
CRIRES_specific/: data_read.py  observation_simulation.py
TLS/data/: TLS_I2_FTS.fits
TLS_specific/: combined_plot.py
data/TLS/: BETA_GEM_deconvolved.fits
data/TLS/Deconv/: HARPS.2006-09-08T02:12:38.604_s1d_A.fits
data/TLS/SPECTRA/: TV00001.fits  TV00004.fits  TV00005.fits  TV00007.fits  TV00020.fits  TV00021.fits
data/TLS/hd189733/: TV00002.fits  TV00003.fits  TV00010.fits  TV00012.fits  TV00013.fits  TV00014.fits  TV00018.fits  TV00019.fits  TV00024.fits
data/TLS/other/: BETA_GEM.fits
inst/: FTS_resample.py  airtovac.py  inst_CES.py  inst_CRIRES.py  inst_ESPRESSO.py  inst_GIANO.py  inst_KECK.py  inst_McDonald.py  inst_OES.py  inst_PUCHEROS.py  inst_TLS.py  inst_UVES.py  inst_cplCRIRES.py  phoenix.py  readmultispec.py  template.py
lib/CES/: iodine_50_wn.fits
lib/CRIRES/: K2148_blaze_own.npy  K2192_blaze.npy  blaze_own.fits
lib/McDonald/: mcd1.fits
lib/TLS/: observations  other
lib/atmos/: H2O.fits  O2.fits
tests/: test_runviper.py
tests/test_compare/: test_rvo_par.fits  test_tpl.fits
tests/test_data/: 220325_1.fits  220806_1.fits  SGC_220325_1.fits  SGC_220806_1.fits
utils/: convert_output.py  gplot.py  hbox.py  model.py  param.py  pause.py  targ.py  wstat.py
(+15 files in other folders)
